// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":false,"disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"","isInvalid":true,"disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":false,"disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <!---->
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":false} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":"base"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-20 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":"small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":"wide"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-24 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":"x-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-12 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":"xx-small"} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-8 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true,"inputWidth":null} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;

exports[`[[ SelectInput ]] renders \`SelectInput\` with all prop options: {"label":"Test label","description":"Test description","inputId":"test-input-id","errorMessage":"test-error-message","options":[{"value":"Value 1","label":"Label 1"},{"value":"Value 2","label":"Label 2"}],"placeholder":"test-placeholder","isInvalid":true,"disabled":true} 1`] = `
"<div class=\\"grid gap-4 sm:gap-6 grid-cols-1 md:grid-cols-fr-16 py-4\\">
  <div class=\\"\\"><label for=\\"test-input-id\\" class=\\"text-sm text-vanilla-100 mb-1 block\\"> Test label </label>
    <div class=\\"text-xs leading-5 text-vanilla-400\\">
      <p>Test description</p>
    </div>
  </div>
  <div>
    <div class=\\"h-8\\">
      <zselect-stub placeholder=\\"test-placeholder\\" disabled=\\"true\\" spacing=\\"py-1 px-2\\" class=\\"text-sm\\">
        <z-option label=\\"Label 1\\" value=\\"Value 1\\" class=\\"truncate\\"></z-option>
        <z-option label=\\"Label 2\\" value=\\"Value 2\\" class=\\"truncate\\"></z-option>
      </zselect-stub>
    </div>
    <p class=\\"ml-0.5 mt-1 text-xs text-cherry\\">
      test-error-message
    </p>
  </div>
</div>"
`;
